# bevy_zhuose_qi

./: .gitignore  Cargo.toml  README.md  fire_colors.js  fire_params.js  fire_simple.js  fire_wild.js  index.html  laser.js  laser_rotating.js  single_fire.html  single_fire.js  wild_fire.js  write_fire_texture.js
.github/workflows/: examples.yaml
examples/: README.md  fire_colors.rs  fire_params.rs  fire_wild.rs  laser.rs  laser_rotating.rs  single_fire.rs  wild_fire.rs  write_fire_texture.rs
src/: lib.rs
src/laser/: es.laser.frag  es.laser.vert  laser.frag  mod.rs
src/topdownfire/: es.fire.frag  fire.frag  mod.rs
wasm/: fire_colors.html  fire_params.html  fire_simple.html  fire_wild.html  index.html  laser.html  laser_rotating.html  wild_fire.html
