[package]
name = "bevy_zhuose_qi"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"
license = "MIT"
publish = false
exclude = ["wasm", "assets", "*.gif", "*.mp4"]

[dependencies.bevy]
version = "0.5"
default-features = false
features = [ "render" ]

[dev-dependencies]
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
bevy_webgl2 = "0.5"

[features]
default = ["topdownfire", "laser"]
topdownfire = []
laser = []
examples = [ "bevy/bevy_winit", "bevy/bevy_wgpu" ]
examples-wasm = [ "bevy/bevy_winit" ]
